# pia-player

./: .editorconfig  .eslintignore  .eslintrc.cjs  .eslintrc.json  .gitignore  .npmrc  .stylelintrc  .stylelintrc.json  README.md  dev-app-update.yml  electron-builder.config.js  forge.config.js  modern.config.ts  package-lock.json  package.json  pnpm-lock.yaml  sync-version.js  tsconfig.json  webpack.plugins.js  webpack.renderer.config.js  webpack.rules.js
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml  release.yml
app/: eventKeys.ts  pnpm-lock.yaml
app/main/: vite.config.ts
app/main/src/: accelerator.ts  devtools.ts  hooks.ts  index.ts  menu.ts
app/preload/: vite.config.ts
app/renderer/: index.html  vite.config.ts
scripts/: build.js  licenses.js  make-package-json.js  watch.js
src/: .eslintrc.cjs  App.tsx  accelerator.ts  api.ts  app.tsx  constant.ts  eventKeys.ts  global.less  global.scss  hooks.ts  index.html  index.ts  menu.ts  preload.ts  renderer.ts  updater.ts  vars.less
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: main.rs  preload.js
src/api/: api.ts  index.ts
src/db/: index.ts
src/hooks/: use-config.ts  use-media-devices.ts  use-player.ts  use-user-info.ts
src/pages/: index.tsx
src/routes/: layout.tsx  page.data.ts
src/store/: config.ts  global.ts  index.ts  layout-height.ts  playlist.ts  user-info.ts
src/types/: env.d.ts  index.d.ts
src/utils/: common.ts  common.tsx  html.tsx
src/view/: index.ts  insert.css
types/: global.d.ts  index.d.ts
(+64 files in other folders)
